login bug fixed, sign in container was covering footer and navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -585,4 +585,8 @@ The code was taken from: https://responsivedesign.is/develop/browser-feature-sup
     width: 100%;
     height: 80vw;
     }
+
+    .login-background {
+    height: 80vw;
+    }
 }
